--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -6,14 +6,11 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <form action="/todos" method="POST">
-      <input type="text" name="content" />
-      <input type="submit" value="新增" />
-    </form>
-    <ul>
-      <% for(var i=0; i<todos.length; i++) {%>
-      <li><%= todos[i].get('content') %></li>
-      <% } %>
-    </ul>
+    <div><%= todos %></div>
+    <!--<ul>-->
+      <!--<% for(var i=0; i<todos.length; i++) {%>-->
+      <!--<li><%= todos[i] %></li>-->
+      <!--<% } %>-->
+    <!--</ul>-->
   </body>
 </html>
