--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,16 +1,59 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>Todo</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <div><%= todos %></div>
-    <!--<ul>-->
-      <!--<% for(var i=0; i<todos.length; i++) {%>-->
-      <!--<li><%= todos[i] %></li>-->
-      <!--<% } %>-->
-    <!--</ul>-->
-  </body>
+
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <title><%= title %></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+  <title>Bootstrap 101 Template</title>
+
+  <!-- Bootstrap -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+
+
+<body>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/js/bootstrap.min.js"></script>
+
+
+<div class="container">
+  <div class="input-group" style="margin-top: 20px;">
+    <span class="input-group-addon" id="basic-addon1">标签</span>
+    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group" style="margin-top: 20px;">
+    <span class="input-group-addon" id="basic-addon1">网址来源</span>
+    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="input-group" style="margin-top: 20px;">
+    <span class="input-group-addon" id="basic-addon1">文章标题</span>
+    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+  </div>
+  <div class="form-group" style="margin-top: 20px;">
+    <label for="name">内容</label>
+    <textarea class="form-control" rows="10"></textarea>
+  </div>
+  <button type="button" class="btn btn-primary" style="margin-top: 20px;">提交</button>
+
+</div>
+
+
+</body>
+<script type="text/javascript">
+
+</script>
 </html>
